--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -78,6 +78,7 @@
             android:clickable="true"
             android:textStyle="bold"
             android:layout_marginTop="8dp"
+            android:textSize="18dp"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/colorAccent"
             android:text="New Register"
